# node-synonymizer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/node_synonymizer/: __init__.py  node_synonymizer.py
tests/: test_node_synonymizer.py
