[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "node-synonymizer"
version = "0.1.0"
description = "Standalone Python client for the SRI Node Normalizer and Name Resolver APIs. Originally extracted from RTX-ARAX."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Adilbek Bazarkulov", email = "bazarkuad@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "aiohttp==3.9.4",
    "bmt==1.4.6",
    "pandas==2.3.1",
    "requests==2.32.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.1.1",
]

[project.urls]
Homepage = "https://github.com/Translator-CATRAX/node-synonymizer"
Issues = "https://github.com/Translator-CATRAX/node-synonymizer/issues"

[tool.setuptools.packages.find]
where = ["src"]
